few styling to the document

--- a/index.html
+++ b/index.html
@@ -10,60 +10,62 @@
 </head>
 
 <body>
-    <div class="header">
-        <nav class="menu">
+    <!--==top Navigation-->
+        <nav class="navbar">
             <ul>
-                <li><a href="#"><img src="img/user.png" alt="user name"></a></li>
-                <li><a href="#"><img src="img/rounded-corners-uniformed.png" alt="apps icon"></a></li>
-                <li><a href="#">Images</a></li>
                 <li><a href="#">Gmail</a></li>
+                <li><a href="#">Images</a></li>
+                <li><a href="#"><img src="img/rounded-corners-uniformed.png" alt="apps icon"></a></li>
+                <li><a href="#"><img src="img/user.png" alt="user name"></a></li>
             </ul>
         </nav>
 
-    </div>
-    <div id="mainContaint">
+         <!--google logo-->
         <div class="logo">
             <img src="img/googlelogo_color_272x92dp.png" alt="" srcset="">
         </div>
+        <!--Search box-->
         <div class="search-box">
             <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-
+                <input class="searchMe" type="search" placeholder="Search" aria-label="Search">
             </form>
-
         </div>
-        <div class="btn">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-            <button class="btn btn-outline-success" type="submit">Search</button>
+        <!--two buttons bellow the search box-->
+        <div class="btns">
+                <button class="btn" type="submit">Google Search</button>
+                <button class="btn1" type="submit">I'm Feeling lucky</button>
         </div>
+        <!--the Langauge links below the button-->
         <div class="language-links">
-            <a href="#">Afaan Oromo</a>
-            <a href="#">English</a>
-            <a href="#">Swahilli</a>
+            
+            <ul>Google offered in:
+                <li> <a href="#">Afaan Oromo</a></li>
+                <li> <a href="#">English</a></li>
+                <li> <a href="#">Swahilli</a></li>
+            </ul>  
         </div>
-    </div>
-    <div class="footer">
-        <div class="Country">
-            <p>Ethiopia</p>
+        <!--the footer section having three rows-->
+        <div class="footer">
+            <div class="Country">
+                <p>Ethiopia</p>
+            </div>
+        <div class="foot2">
+            <div class="ad">
+                <ul>
+                    <li><a href="#">Advertizing</a></li>
+                    <li><a href="#">Bussiness</a></li>
+                    <li><a href="#">About </a></li>
+                    <li><a href="#">How to Search Works</a></li>
+                </ul>
+            </div>
+            <div class="setting">
+                <ul>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Settings</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="ad">
-            <ul>
-                <li><a href="#">Advertizing</a></li>
-                <li><a href="#">Bussiness</a></li>
-                <li><a href="#">About </a></li>
-                <li><a href="#">How to Search Works</a></li>
-            </ul>
-
-        </div>
-        <div class="setting">
-            <ul>
-              <li><a href="#">Privacy</a></li>
-              <li><a href="#">Terms</a></li>
-              <li><a href="#">Settings</a></li>
-            </ul>
-        </div>
-
-    </div>
 
 
 </body>
