revies googlehome page design

--- a/index.html
+++ b/index.html
@@ -10,64 +10,50 @@
 </head>
 
 <body>
-    <!--==top Navigation-->
-        <nav class="navbar">
+    <header>
+        <nav>
             <ul>
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Images</a></li>
-                <li><a href="#"><img src="img/rounded-corners-uniformed.png" alt="apps icon"></a></li>
-                <li><a href="#"><img src="img/user.png" alt="user name"></a></li>
+                <li><a href="#">App</a></li>
+                <li><a id="usr" href="#">D</a></li>
             </ul>
         </nav>
+    </header>
+    <main>
+        <section id="logo">
+            <img src="/img/googlelogo_color_272x92dp.png" alt="google logo">
+        </section>
+        <form action="">
+            <input  id="txt-form"  type="text" placeholder="search-icon"> <br>
+            <button>Google Search</button>
+            <button>I'm Feeling Lucky</button>
+        </form>
+        <section id="language">
+            <code>Google offered in :</code>
+            <a href="#">Afaan Oromo</a>
+            <a href="#">Soomaali</a>
+            <a href="#">Tigrigna</a>
+        </section>
 
-         <!--google logo-->
-        <div class="logo">
-            <img src="img/googlelogo_color_272x92dp.png" alt="" srcset="">
+    </main>
+    <footer id="foot" >
+        <div id="country">
+            <p>Ethiopia</p>
         </div>
-        <!--Search box-->
-        <div class="search-box">
-            <form class="d-flex">
-                <input class="searchMe" type="search" placeholder="Search" aria-label="Search">
-            </form>
-        </div>
-        <!--two buttons bellow the search box-->
-        <div class="btns">
-                <button class="btn" type="submit">Google Search</button>
-                <button class="btn1" type="submit">I'm Feeling lucky</button>
-        </div>
-        <!--the Langauge links below the button-->
-        <div class="language-links">
-            
-            <ul>Google offered in:
-                <li> <a href="#">Afaan Oromo</a></li>
-                <li> <a href="#">English</a></li>
-                <li> <a href="#">Swahilli</a></li>
-            </ul>  
-        </div>
-        <!--the footer section having three rows-->
-        <div class="footer">
-            <div class="Country">
-                <p>Ethiopia</p>
-            </div>
-        <div class="foot2">
-            <div class="ad">
-                <ul>
-                    <li><a href="#">Advertizing</a></li>
-                    <li><a href="#">Bussiness</a></li>
-                    <li><a href="#">About </a></li>
-                    <li><a href="#">How to Search Works</a></li>
-                </ul>
-            </div>
-            <div class="setting">
-                <ul>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Settings</a></li>
-                </ul>
-            </div>
+        <div id="foot1" >
+            <a href="#">About</a>
+            <a href="#">Advertising</a>
+            <a href="#">Business</a>
+            <a href="#">How Search work</a>
+        </div >
+        <div id="foot2">
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">Settings</a>
         </div>
 
-
+    </footer>
 </body>
 
 </html>
